ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "flow.dev.org.rgo"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: greeting
            port:
              number: 80
  - host: "*.org.rgo"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: service2
            port:
              number: 80
